# WalacTV-Desktop

./: .env.example  .gitignore  .npmrc  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
docs/superpowers/specs/: 2026-06-19-2k-scaling-design.md
scripts/: fetch-mpv-windows.sh
src/: App.module.css  App.tsx  config.ts  credentials.ts  updater.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/mpv/: .gitignore
src-tauri/src/: main.rs
src/api/: client.ts  types.ts
src/components/: ChannelCard.module.css  ChannelCard.tsx  DiscoverContent.module.css  DiscoverContent.tsx  ErrorScreen.module.css  ErrorScreen.tsx  EventDetail.module.css  EventDetail.tsx  EventsContent.module.css  EventsContent.tsx  HomeContent.module.css  HomeContent.tsx  LoadingScreen.module.css  LoadingScreen.tsx  LoginScreen.module.css  LoginScreen.tsx  MediaCard.module.css  MediaCard.tsx  MovieDetail.module.css  MovieDetail.tsx  Player.module.css  Player.tsx  SearchContent.module.css  SearchContent.tsx  SearchInput.module.css  SearchInput.tsx  SearchableSelect.module.css  SearchableSelect.tsx  SectionRow.module.css  SectionRow.tsx  SeriesDetail.module.css  SeriesDetail.tsx  SettingsContent.module.css  SettingsContent.tsx  SideRail.module.css  SideRail.tsx  TVGuide.module.css  TVGuide.tsx
src/store/: useAppStore.ts
src/styles/: global.css
src/utils/: series.ts
(+2 files in other folders)
